--- a/styles/new-me.css
+++ b/styles/new-me.css
@@ -116,3 +116,37 @@
     text-align: center;
 
 }
+/* success */
+.success{
+    margin-top: 60px;
+    display: flex;
+    gap:30px;
+    margin-left: 50px;
+    margin-right: 50px;
+
+}
+.success-title{
+    font-weight: 700;
+    font-size: 40px;
+    color: #151414;
+
+}
+.success-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #444343;
+
+}
+.success-point{
+    font-weight: 400;
+    font-size: 16px;
+    color: #444343;
+
+
+}
+.success-img{ 
+    margin-left: 150px;
+    margin-right: 80px;
+    margin-top: 100px;
+
+}
