--- a/styles/new-me.css
+++ b/styles/new-me.css
@@ -150,3 +150,34 @@
     margin-top: 100px;
 
 }
+/* positive */
+.positive{
+    width: 900px;
+    height: 230px;
+    background-image: linear-gradient(90deg, #005FAC 0%, rgba(0, 95, 172, 0) 100%),url(../images/watch.png);
+    border-radius: 8px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 100px;
+    padding-bottom: 50px;
+
+}
+.positive-title{
+    font-weight: 700;
+    font-size: 40px;
+    color: #FFFFFF;
+    padding-left: 50px;
+    padding-top: 50px;
+    margin-right: 300px;
+
+}
+.bttn{
+    margin-left: 50px;
+    padding: 10px 20px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #005FAC;
+    border: 1px solid white;
+    border-radius: 5px;
+
+}
